ci(rootscope): cambios-Profesor-Login
Implementación de front(estudiantes) en login y registro de usuario

--- a/src/main/resources/templates/layout/Plantilla.html
+++ b/src/main/resources/templates/layout/Plantilla.html
@@ -21,7 +21,7 @@
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Home</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/planes">Planes</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Contactos</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Iniciar Sesion</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/login">Iniciar Sesion</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Suscribirse</a>
                 </nav>
             </div>
