--- a/src/main/resources/templates/estudiante/listado.html
+++ b/src/main/resources/templates/estudiante/listado.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html xmlns="https://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
     
     <head th:replace="layout/plantilla2 :: head">
     </head>
