--- a/src/main/resources/templates/layout/Plantilla2.html
+++ b/src/main/resources/templates/layout/Plantilla2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"data-bs-theme="dark">
     <head th:fragment="head">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,7 +21,7 @@
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Gestiones de Clases</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/estudiantes">Gestión de Estudiantes</a>
                     <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Configuración</a>
-                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Salir</a>
+                    <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="/">Salir</a>
                 </nav>
             </div>
         </header>
