--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" data-bs-theme="auto">
+<html xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
     <head>
         <title>Iniciar Sesión</title>
         <meta charset="utf-8">
@@ -39,7 +39,7 @@
                             Recuérdame
                         </label>
                     </div>
-                    <button class="btn btn-primary w-100 py-2" type="button" onclick="window.location.href = '/estudiantes'">Iniciar sesión</button>
+                    <button class="btn btn-primary w-100 py-2" type="button" onclick="window.location.href = 'estudiantes/listado'">Iniciar sesión</button>
                     <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
                 </form>
             </main>
