--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
     <head>
         <title>Prueba</title>
         <meta charset="utf-8">
@@ -12,6 +12,43 @@
     </head>
     <body>
         <header th:replace="~{layout/Plantilla :: header}"/>
-        <div class="container-lg">TODO write content</div>
+        <div class="container-lg">
+            <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+                <div class="container-fluid py-5">
+                    <h1 class="display-5 fw-bold">Impulsa tu Negocio con Nuestra Plataforma Innovadora</h1>
+                    <p class="col-md-8 fs-4">Descubre cómo nuestra tecnología puede transformar tus operaciones y aumentar tu productividad.</p>
+                    <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'">Comienza Ahora</button>
+                </div>
+            </div>
+        </div>
+        <div class="container-lg">
+            <div class="row align-items-md-stretch">
+                <h1 class="display-5 fw-bold">Beneficios Principales</h1>
+                <div class="col-md-6">
+                    <div class="h-100 p-5 text-bg-dark rounded-3">
+                        <h2>Ahorro de Tiempo</h2>
+                        <p>Automatiza tus procesos y gana más tiempo para lo que realmente importa.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="h-100 p-5 text-bg-dark rounded-3">
+                        <h2>Incremento de Eficiencia</h2>
+                        <p>Optimiza tus operaciones con nuestras herramientas avanzadas.</p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="h-100 p-5 text-bg-dark rounded-3">
+                        <h2>Soporte 24/7</h2>
+                        <p>Nuestro equipo de soporte está disponible todo el día para ayudarte.</p>
+                    </div>
+                </div>
+                <button class="btn btn-primary btn-lg" type="button" onclick="window.location.href = '/planes'">Ver planes</button>
+            </div>
+        </div>
+        <div class="container-lg">
+            <footer class="pt-3 mt-4 text-body-secondary border-top">
+                &copy; 2024
+            </footer>
+        </div>
     </body>
 </html>
