--- a/src/main/resources/templates/asistencias/listado.html
+++ b/src/main/resources/templates/asistencias/listado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
 <head>
     <title>Lista de Asistencias</title>
     <meta charset="UTF-8">
