--- a/src/main/resources/templates/login/fragmentoLogin.html
+++ b/src/main/resources/templates/login/fragmentoLogin.html
@@ -27,7 +27,7 @@
                         Recuérdame
                     </label>
                 </div>
-                <button class="btn btn-primary w-100 py-2" type="button" onclick="window.location.href = '/estudiantes'">Iniciar sesión</button>
+                <button class="btn btn-primary w-100 py-2" type="button" onclick="window.location.href = 'estudiantes/listado''">Iniciar sesión</button>
                 <p class="mt-5 mb-3 text-body-secondary">&copy; 2017–2024</p>
             </form>
         </main>
