--- a/src/main/resources/templates/planes/formulario.html
+++ b/src/main/resources/templates/planes/formulario.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-
-<html>
+<html data-bs-theme="dark">
     <head>
         <title>Suscipcion</title>
         <meta charset="utf-8">
