--- a/src/main/resources/templates/asistencias/listado.html
+++ b/src/main/resources/templates/asistencias/listado.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" data-bs-theme="dark">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Lista de Asistencias</title>
     <meta charset="UTF-8">
@@ -7,22 +7,35 @@
     <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
-    <div class="container">
-        <h1>Lista de Asistencias</h1>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>ID Matrícula</th>
-                    <th>Fecha</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr th:each="asistencia : ${asistencias}">
-                    <td th:text="${asistencia.matriculaid.id}">ID Matrícula</td>   
-                    <td th:text="${asistencia.fecha}">Fecha</td>
-                </tr>
-            </tbody>
-        </table>
+    <div class="container my-4">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-6">Lista de Asistencias</h1>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Fecha</th>
+                            <th>Matrícula ID</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="asistencia : ${asistencias}">
+                            <td th:text="${asistencia.id}"></td>
+                            <td th:text="${asistencia.fecha}"></td>
+                            <td th:text="${asistencia.matriculaid.id}"></td>
+                            <td>
+                                <a th:href="@{/asistencias/edit/{id}(id=${asistencia.id})}" class="btn btn-primary btn-sm">Editar</a>
+                                <a th:href="@{/asistencias/delete/{id}(id=${asistencia.id})}" class="btn btn-danger btn-sm">Eliminar</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a th:href="@{/asistencias/add}" class="btn btn-success">Agregar Nueva Asistencia</a>
+            </div>
+        </div>
     </div>
 </body>
+</html>
 </html>
