--- a/src/main/resources/templates/calificaciones/list.html
+++ b/src/main/resources/templates/calificaciones/list.html
@@ -4,42 +4,49 @@
     <title>Lista de Calificaciones</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
 </head>
 <body>
-    <h1>Lista de Calificaciones</h1>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Matricula ID</th>
-                <th>Laboratorio 1</th>
-                <th>Laboratorio 2</th>
-                <th>Quiz 1</th>
-                <th>Quiz 2</th>
-                <th>Examen 1</th>
-                <th>Examen 2</th>
-                <th>Proyecto</th>
-                <th>Acciones</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr th:each="calificacion : ${calificaciones}">
-                <td th:text="${calificacion.id}"></td>
-                <td th:text="${calificacion.matriculaid.id}"></td>
-                <td th:text="${calificacion.laboratorio1}"></td>
-                <td th:text="${calificacion.laboratorio2}"></td>
-                <td th:text="${calificacion.quiz1}"></td>
-                <td th:text="${calificacion.quiz2}"></td>
-                <td th:text="${calificacion.examen1}"></td>
-                <td th:text="${calificacion.examen2}"></td>
-                <td th:text="${calificacion.proyecto}"></td>
-                <td>
-                    <a th:href="@{/calificaciones/edit/{id}(id=${calificacion.id})}">Editar</a>
-                    <a th:href="@{/calificaciones/delete/{id}(id=${calificacion.id})}">Eliminar</a>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <a href="/calificaciones/create">Crear Nueva Calificación</a>
+    <div class="container my-4">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-6">Lista de Calificaciones</h1>
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Matrícula</th>
+                            <th>Laboratorio 1</th>
+                            <th>Laboratorio 2</th>
+                            <th>Quiz 1</th>
+                            <th>Quiz 2</th>
+                            <th>Examen 1</th>
+                            <th>Examen 2</th>
+                            <th>Proyecto</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr th:each="calificacion : ${calificaciones}">
+                            <td th:text="${calificacion.id}"></td>
+                            <td th:text="${calificacion.matriculaid.id}"></td>
+                            <td th:text="${calificacion.laboratorio1}"></td>
+                            <td th:text="${calificacion.laboratorio2}"></td>
+                            <td th:text="${calificacion.quiz1}"></td>
+                            <td th:text="${calificacion.quiz2}"></td>
+                            <td th:text="${calificacion.examen1}"></td>
+                            <td th:text="${calificacion.examen2}"></td>
+                            <td th:text="${calificacion.proyecto}"></td>
+                            <td>
+                                <a th:href="@{/calificaciones/edit/{id}(id=${calificacion.id})}" class="btn btn-primary btn-sm">Editar</a>
+                                <a th:href="@{/calificaciones/delete/{id}(id=${calificacion.id})}" class="btn btn-danger btn-sm">Eliminar</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <a th:href="@{/calificaciones/add}" class="btn btn-success">Agregar Nueva Calificación</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
